--- a/reveal/index.html
+++ b/reveal/index.html
@@ -39,7 +39,7 @@
 <div class="slides">
 <section data-markdown>
     <script type="text/template">
-## 40423126紀鈞瀚個人簡報
+## 40423126紀鈞瀚個人簡報(09/14)
 
 ### 虎科大機械設計工程系
 
