--- a/reveal/index.html
+++ b/reveal/index.html
@@ -83,7 +83,7 @@ Created by [40423126](https://github.com/mdecadp2018/site-40423126/tree/gh-pages
 * 使用reveal.leo編輯投影片
 * 再次使用pelican.leo建立網誌
 * 運用share X錄製操作影片
-
+* Onshape HW 1-1錄製操作影片
     </script>
 </section>
 
@@ -106,10 +106,24 @@ Created by [40423126](https://github.com/mdecadp2018/site-40423126/tree/gh-pages
 <section data-markdown>
     <script type="text/template">
 <!-- 請注意, @others 不可以內縮 -->
-# Week1操作影片
+## Week1操作影片
 
 <iframe src="https://player.vimeo.com/video/290430318" width="640" height="480" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <p><a href="https://vimeo.com/290430318">40423126 Week1 上課內容</a> from <a href="https://vimeo.com/user60322140">紀鈞瀚</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+
+    </script>
+</section>
+
+
+
+						
+<section data-markdown>
+    <script type="text/template">
+<!-- 請注意, @others 不可以內縮 -->
+## Week1操作影片
+
+<iframe src="https://player.vimeo.com/video/291336648" width="640" height="359" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<p><a href="https://vimeo.com/291336648">40423126 Week1 回家作業</a> from <a href="https://vimeo.com/user60322140">紀鈞瀚</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 
     </script>
 </section>
