--- a/config/content.htm
+++ b/config/content.htm
@@ -1,1 +1,23 @@
-<h1>簡介</h1><p>40423126 四設計四甲 紀鈞瀚-個人網站</p><p>2018 Fall 計算機程式與電腦輔助設計實習課程分組網站</p><h2>CMSimfly 網站</h2><p>各組必須自行更改 Config 中的網站標題, 且每次完成近端動態網頁編輯後, 以 generate_pages 按鈕, 將動態網頁資料轉為靜態網頁資料, 之後再新增、提交並推送到遠端倉儲.</p><h2>reveal 投影片</h2><p>以 <a href="http://www.leoeditor.com/">Leo Editor</a> 開啟 config/reveal.leo</p><h2>pelican 網誌</h2><p>以 <a href="http://www.leoeditor.com/">Leo Editor</a> 開啟 config/pelican.leo&nbsp;</p><p>各分組必須自行更改&nbsp;@edit pelicanconf.py 中的 AUTHOR 與 SITENAME</p><p>更改 @edit publishconf.py 中的 SITEURL</p><p></p><h1>操作影片</h1><h2>Week1</h2><p><span>國立虎尾科技大學機械設計工程系計算機程式 - 一乙第八週第三部分, 說明如何利用 Eric6 IDE 建立所需的 calculator 計算機程式對話表單. 過程中主要學習如何啟動 Eric6, 如何建立 Eric6 專案, 如何切換 Sources tab 與 Form tab, 如何在進入 Qt Designer 後利用格點布局, 建立按鈕與 Line Edit 部件.</span></p><p><iframe width="640" height="480" src="//player.vimeo.com/video/290430318?title=0&amp;amp;byline=0" frameborder="0" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allowfullscreen="allowfullscreen" data-mce-fragment="1"></iframe></p><p><a href="https://vimeo.com/290430318">40423126 Week1 上課內容</a> from <a href="https://vimeo.com/user60322140">紀鈞瀚</a> on <a href="https://vimeo.com">Vimeo</a>.</p><h2>Week2</h2><p><span>國立虎尾科技大學機械設計工程系計算機程式 - 一乙第八週第三部分, 說明如何利用 Eric6 IDE 建立所需的 calculator 計算機程式對話表單. 過程中主要學習如何啟動 Eric6, 如何建立 Eric6 專案, 如何切換 Sources tab 與 Form tab, 如何在進入 Qt Designer 後利用格點布局, 建立按鈕與 Line Edit 部件</span></p><h1>Python 手冊</h1><p>計算機程式教材:&nbsp;&nbsp;<a href="http://mde.tw/cp2018/content/">http://mde.tw/cp2018/content/</a>&nbsp;</p><p>可攜程式下載: <a href="https://drive.google.com/file/d/1DWtyoUhl8CycKJ8uulB3viRXE39KqpE1/view?usp=sharing">p37.7z</a></p><h1>OnShape 手冊</h1><p><a href="https://www.onshape.com/">https://www.onshape.com/</a>&nbsp;</p><p>電腦輔助設計實習課程教材:&nbsp;<a href="http://mde.tw/cadp2018/content/">http://mde.tw/cadp2018/content/</a>&nbsp;</p><h1>Fusion 360</h1><p><a href="https://www.autodesk.com/products/fusion-360/students-teachers-educators">https://www.autodesk.com/products/fusion-360/students-teachers-educators</a>&nbsp;</p>
+<h1>簡介</h1>
+<p>2018 Fall 計算機程式與電腦輔助設計實習課程分組網站</p>
+<p>40423126 四設計四甲 紀鈞瀚-個人網站</p>
+<h2>CMSimfly 網站</h2>
+<p>各組必須自行更改 Config 中的網站標題, 且每次完成近端動態網頁編輯後, 以 generate_pages 按鈕, 將動態網頁資料轉為靜態網頁資料, 之後再新增、提交並推送到遠端倉儲.</p>
+<h2>reveal 投影片</h2>
+<p>以 <a href="http://www.leoeditor.com/">Leo Editor</a> 開啟 config/reveal.leo</p>
+<h2>pelican 網誌</h2>
+<p>以 <a href="http://www.leoeditor.com/">Leo Editor</a> 開啟 config/pelican.leo&nbsp;</p>
+<p>各分組必須自行更改&nbsp;@edit pelicanconf.py 中的 AUTHOR 與 SITENAME</p>
+<p>更改 @edit publishconf.py 中的 SITEURL</p>
+<p></p>
+<h1>操作影片</h1>
+<h2>Week1</h2><p>共分成兩部影片</p><p>第一部為上課內容。<br>有創建投影片和修改動態網頁，以及編輯及推送示範。</p><p>第二部為回家作業。<br>為Onshape1-1的homework練習作業操作。</p><p><iframe width="640" height="480" src="//player.vimeo.com/video/290430318?title=0&amp;amp;byline=0" frameborder="0" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allowfullscreen="allowfullscreen" data-mce-fragment="1"></iframe></p><p><iframe width="640" height="359" src="//player.vimeo.com/video/291336648?title=0&amp;amp;byline=0" frameborder="0" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allowfullscreen="allowfullscreen" data-mce-fragment="1"></iframe></p><h2>Week2</h2>
+<p></p>
+<h1>Python 手冊</h1>
+<p>計算機程式教材:&nbsp;&nbsp;<a href="http://mde.tw/cp2018/content/">http://mde.tw/cp2018/content/</a>&nbsp;</p>
+<p>可攜程式下載: <a href="https://drive.google.com/file/d/1DWtyoUhl8CycKJ8uulB3viRXE39KqpE1/view?usp=sharing">p37.7z</a></p>
+<h1>OnShape 手冊</h1>
+<p><a href="https://www.onshape.com/">https://www.onshape.com/</a>&nbsp;</p>
+<p>電腦輔助設計實習課程教材:&nbsp;<a href="http://mde.tw/cadp2018/content/">http://mde.tw/cadp2018/content/</a>&nbsp;</p>
+<h1>Fusion 360</h1>
+<p><a href="https://www.autodesk.com/products/fusion-360/students-teachers-educators">https://www.autodesk.com/products/fusion-360/students-teachers-educators</a>&nbsp;</p>
