--- a/content/Week1.html
+++ b/content/Week1.html
@@ -62,7 +62,8 @@ $(function(){
 </ul>
 </confmenu></header>
 <div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='簡介.html'>簡介</a><ul><li><a href='CMSimfly 網站.html'>CMSimfly 網站</a><li><a href='reveal 投影片.html'>reveal 投影片</a><li><a href='pelican 網誌.html'>pelican 網誌</a></li></ul><li><a href='操作影片.html'>操作影片</a><ul><li><a href='Week1.html'>Week1</a><li><a href='Week2.html'>Week2</a></li></ul><li><a href='Python 手冊.html'>Python 手冊</a><li><a href='OnShape 手冊.html'>OnShape 手冊</a><li><a href='Fusion 360.html'>Fusion 360</a></li></ul></nav><section>操作影片 << <a href='操作影片.html'>Previous</a> <a href='Week2.html'>Next</a> >> Week2<br /><h1>Week1</h1>
-<p><span>國立虎尾科技大學機械設計工程系計算機程式 - 一乙第八週第三部分, 說明如何利用 Eric6 IDE 建立所需的 calculator 計算機程式對話表單. 過程中主要學習如何啟動 Eric6, 如何建立 Eric6 專案, 如何切換 Sources tab 與 Form tab, 如何在進入 Qt Designer 後利用格點布局, 建立按鈕與 Line Edit 部件.</span></p>
+<p>共分成兩部影片</p>
+<p>第一部為上課內容。<br>有創建投影片和修改動態網頁，以及編輯及推送示範。</p>
+<p>第二部為回家作業。<br>為Onshape1-1的homework練習作業操作。</p>
 <p><iframe width="640" height="480" src="//player.vimeo.com/video/290430318?title=0&amp;amp;byline=0" frameborder="0" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allowfullscreen="allowfullscreen" data-mce-fragment="1"></iframe></p>
-<p><a href="https://vimeo.com/290430318">40423126 Week1 上課內容</a> from <a href="https://vimeo.com/user60322140">紀鈞瀚</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
-<br />操作影片 << <a href='操作影片.html'>Previous</a> <a href='Week2.html'>Next</a> >> Week2</section></div></body></html>
+<p><iframe width="640" height="359" src="//player.vimeo.com/video/291336648?title=0&amp;amp;byline=0" frameborder="0" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allowfullscreen="allowfullscreen" data-mce-fragment="1"></iframe></p><br />操作影片 << <a href='操作影片.html'>Previous</a> <a href='Week2.html'>Next</a> >> Week2</section></div></body></html>
