--- a/content/Onshape Lesson Plan.html
+++ b/content/Onshape Lesson Plan.html
@@ -61,6 +61,11 @@ $(function(){
 
 </ul>
 </confmenu></header>
-<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='簡介.html'>簡介</a><ul><li><a href='CMSimfly 網站.html'>CMSimfly 網站</a><li><a href='reveal 投影片.html'>reveal 投影片</a><li><a href='pelican 網誌.html'>pelican 網誌</a></li></ul><li><a href='操作影片.html'>操作影片</a><ul><li><a href='Week1.html'>Week1</a><li><a href='Week2.html'>Week2</a></li></ul><li><a href='Python 手冊.html'>Python 手冊</a><li><a href='OnShape 手冊.html'>OnShape 手冊</a><li><a href='Fusion 360.html'>Fusion 360</a></li></ul></nav><section>簡介 << <a href='簡介.html'>Previous</a> <a href='reveal 投影片.html'>Next</a> >> reveal 投影片<br /><h1>CMSimfly 網站</h1>
-<p>各組必須自行更改 Config 中的網站標題, 且每次完成近端動態網頁編輯後, 以 generate_pages 按鈕, 將動態網頁資料轉為靜態網頁資料, 之後再新增、提交並推送到遠端倉儲.</p>
+<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='簡介.html'>簡介</a><ul><li><a href='Onshape Lesson Plan.html'>Onshape Lesson Plan</a><li><a href='reveal 投影片.html'>reveal 投影片</a><li><a href='pelican 網誌.html'>pelican 網誌</a></li></ul><li><a href='影片實作練習.html'>影片實作練習</a><ul><li><a href='Week1.html'>Week1</a><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a><li><a href='Week5.html'>Week5</a></li></ul><li><a href='Python 手冊.html'>Python 手冊</a><li><a href='OnShape 手冊.html'>OnShape 手冊</a><li><a href='Fusion 360.html'>Fusion 360</a></li></ul></nav><section>簡介 << <a href='簡介.html'>Previous</a> <a href='reveal 投影片.html'>Next</a> >> reveal 投影片<br /><h1>Onshape Lesson Plan</h1>
+<p>Lesson1-1課程內容</p>
+<ol>
+<li>創建一個Onshape帳戶<br>●導航3D環境<br>●解釋基於草圖的建模</li>
+<li>介紹4個基本特徵（擠出，旋轉，掃描，和閣樓）<br>●從2D過渡到3D<br>●介紹基本草圖</li>
+<li>練習Exercise #2的四張圖來熟悉以上介紹的功能指令</li>
+</ol>
 <br />簡介 << <a href='簡介.html'>Previous</a> <a href='reveal 投影片.html'>Next</a> >> reveal 投影片</section></div></body></html>
