--- a/content/Week1.html
+++ b/content/Week1.html
@@ -61,9 +61,10 @@ $(function(){
 
 </ul>
 </confmenu></header>
-<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='簡介.html'>簡介</a><ul><li><a href='CMSimfly 網站.html'>CMSimfly 網站</a><li><a href='reveal 投影片.html'>reveal 投影片</a><li><a href='pelican 網誌.html'>pelican 網誌</a></li></ul><li><a href='操作影片.html'>操作影片</a><ul><li><a href='Week1.html'>Week1</a><li><a href='Week2.html'>Week2</a></li></ul><li><a href='Python 手冊.html'>Python 手冊</a><li><a href='OnShape 手冊.html'>OnShape 手冊</a><li><a href='Fusion 360.html'>Fusion 360</a></li></ul></nav><section>操作影片 << <a href='操作影片.html'>Previous</a> <a href='Week2.html'>Next</a> >> Week2<br /><h1>Week1</h1>
+<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='簡介.html'>簡介</a><ul><li><a href='Onshape Lesson Plan.html'>Onshape Lesson Plan</a><li><a href='reveal 投影片.html'>reveal 投影片</a><li><a href='pelican 網誌.html'>pelican 網誌</a></li></ul><li><a href='影片實作練習.html'>影片實作練習</a><ul><li><a href='Week1.html'>Week1</a><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a><li><a href='Week5.html'>Week5</a></li></ul><li><a href='Python 手冊.html'>Python 手冊</a><li><a href='OnShape 手冊.html'>OnShape 手冊</a><li><a href='Fusion 360.html'>Fusion 360</a></li></ul></nav><section>影片實作練習 << <a href='影片實作練習.html'>Previous</a> <a href='Week2.html'>Next</a> >> Week2<br /><h1>Week1</h1>
 <p>共分成兩部影片</p>
 <p>第一部為上課內容。<br>有創建投影片和修改動態網頁，以及編輯及推送示範。</p>
 <p>第二部為回家作業。<br>為Onshape1-1的homework練習作業操作。</p>
 <p><iframe width="640" height="480" src="//player.vimeo.com/video/290430318?title=0&amp;amp;byline=0" frameborder="0" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allowfullscreen="allowfullscreen" data-mce-fragment="1"></iframe></p>
-<p><iframe width="640" height="359" src="//player.vimeo.com/video/291336648?title=0&amp;amp;byline=0" frameborder="0" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allowfullscreen="allowfullscreen" data-mce-fragment="1"></iframe></p><br />操作影片 << <a href='操作影片.html'>Previous</a> <a href='Week2.html'>Next</a> >> Week2</section></div></body></html>
+<p><iframe width="640" height="359" src="//player.vimeo.com/video/291336648?title=0&amp;amp;byline=0" frameborder="0" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allowfullscreen="allowfullscreen" data-mce-fragment="1"></iframe></p>
+<br />影片實作練習 << <a href='影片實作練習.html'>Previous</a> <a href='Week2.html'>Next</a> >> Week2</section></div></body></html>
