--- a/reveal/index.html
+++ b/reveal/index.html
@@ -57,14 +57,16 @@ Created by [40423126](https://github.com/mdecadp2018/site-40423126/tree/gh-pages
 						
 <section data-markdown>
     <script type="text/template">
-# 投影片快捷鍵
+# 觀看注意事項
 
-* 利用箭頭上下前後換頁
-* 按 f 鍵進入全螢幕模式 (full screen)
-* 按 s 鍵可以顯示投影片筆記 (show)
-* 按 o 鍵可以切換單張或全域檢視 (overview)
-* 按 b 或 . 鍵可以切換螢幕黑屏 (black)
-* 按 Esc 可以退出全螢幕或全域檢視 (Escape)
+1. 每周內容依序為<b><font color="#FF8888">要點→心得→影片/圖片</font></b>
+2. 將游標移至圖片上方可看到文字說明
+3. 利用箭頭上下前後換頁
+4. <b><font color="#FF8888">按 f 鍵</font></b>進入全螢幕模式 (full screen)
+5. <b><font color="#FF8888">按 s 鍵</font></b>可以顯示投影片筆記 (show)
+6. <b><font color="#FF8888">按 o 鍵</font></b>可以切換單張或全域檢視 (overview)
+7. <b><font color="#FF8888">按 b 或 . 鍵</font></b>可以切換螢幕黑屏 (black)
+8. <b><font color="#FF8888">按 Esc</font></b> 可以退出全螢幕或全域檢視 (Escape)
 
     </script>
 </section>
@@ -179,7 +181,8 @@ Created by [40423126](https://github.com/mdecadp2018/site-40423126/tree/gh-pages
 <!-- 請注意, @others 不可以內縮 -->
 ## Week2操作影片
 
-#<b><font color="#9F88FF">即將上映</font></b>
+![alt text](https://i.imgur.com/wt0LRBR.png "更新中")
+
 
     </script>
 </section>
@@ -197,9 +200,9 @@ Created by [40423126](https://github.com/mdecadp2018/site-40423126/tree/gh-pages
 # Week3上課內容
 
 * 練習git的前後更換指令
-* git status →可查看commit記錄
-* git log →可列出歷史commit記錄
-* git checkout (7位數編號) →可回到該版本
+* <b><font color="#FF8888">git status</font></b>可查看commit記錄
+* <b><font color="#FF8888">git log</font></b>可列出歷史commit記錄
+* <b><font color="#FF8888">git checkout (7位數編號)</font></b>可回到該版本
 * 將P37載入隨身碟
 * 更換個人倉儲的內定分支
     </script>
@@ -226,8 +229,8 @@ Created by [40423126](https://github.com/mdecadp2018/site-40423126/tree/gh-pages
 <!-- 請注意, @others 不可以內縮 -->
 ## Week3操作圖片
 
-* 因為步驟練習與上課一模一樣，只上傳結果圖。
-<iframe src="https://i.imgur.com/MCHd2lA.png" width="850" height="600" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+![alt text](https://i.imgur.com/MCHd2lA.png "因為步驟練習與上課一模一樣，只上傳結果圖。")
+
     </script>
 </section>
 
@@ -300,7 +303,7 @@ Created by [40423126](https://github.com/mdecadp2018/site-40423126/tree/gh-pages
 <!-- 請注意, @others 不可以內縮 -->
 # Week5上課心得
 
-<b><font color="#9F88FF">這周教了如何更新git版本，以及上課練習onshape week2的三張圖，覺得時鐘非常有挑戰性，自己摸索還學到了如何轉換Part的顏色，圖基本上都不會太難，多試試就會找到功能可以畫出來了。不過因為畫圖步驟時間過於繁雜，所以都改以圖片方式來呈現。</font></b>
+<b><font color="#9F88FF">這周教了如何更新git版本，以及上課練習onshape week2的三張圖，覺得時鐘非常有挑戰性，自己摸索還學到了如何轉換Part的顏色，圖基本上都不會太難，多試試就會找到功能可以畫出來了。不過因為畫圖步驟時間過於繁雜，所以都改以圖片方式來呈現，簡單明瞭又節省時間。</font></b>
 
     </script>
 </section>
@@ -313,8 +316,8 @@ Created by [40423126](https://github.com/mdecadp2018/site-40423126/tree/gh-pages
 <!-- 請注意, @others 不可以內縮 -->
 ## Week5操作圖片part1(上課)
 
-* 此為onshape第二周的課堂練習
-<iframe src="https://i.imgur.com/B0JE9tD.png" width="1250" height="600" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+![alt text](https://i.imgur.com/B0JE9tD.png "此為onshape第二周的課堂練習")
+
     </script>
 </section>
 
@@ -326,8 +329,8 @@ Created by [40423126](https://github.com/mdecadp2018/site-40423126/tree/gh-pages
 <!-- 請注意, @others 不可以內縮 -->
 ## Week5操作圖片part2(上課)
 
-* 此為onshape第二周的課堂練習
-<iframe src="https://i.imgur.com/GB90dXx.png" width="1250" height="600" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+![alt text](https://i.imgur.com/GB90dXx.png "此為onshape第二周的課堂練習")
+
     </script>
 </section>
 
@@ -339,8 +342,8 @@ Created by [40423126](https://github.com/mdecadp2018/site-40423126/tree/gh-pages
 <!-- 請注意, @others 不可以內縮 -->
 ## Week5操作圖片part3(上課)
 
-* 此為onshape第二周的課堂練習
-<iframe src="https://i.imgur.com/gX98kjK.png" width="1250" height="600" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+![alt text](https://i.imgur.com/gX98kjK.png "此為onshape第二周的課堂練習")
+
     </script>
 </section>
 
@@ -357,7 +360,9 @@ Created by [40423126](https://github.com/mdecadp2018/site-40423126/tree/gh-pages
 # Week6上課內容
 
 * 練習 onshape 2-2 HW中的五個圖
-* 統整各lesson plan的要點，並放在自己的網頁上 
+* 統整各Lesson plan的要點，並放在自己的網頁上 
+* 在個人的github[issue](https://github.com/mdecadp2018/site-40423126/issues) 上放入影片上傳的網址連結
+* 編輯LEO的指令[小秘笈](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet)
     </script>
 </section>
 
@@ -382,7 +387,7 @@ Created by [40423126](https://github.com/mdecadp2018/site-40423126/tree/gh-pages
 <!-- 請注意, @others 不可以內縮 -->
 ## Week6操作影片
 
-* 此為onshape第二周的回家練習
+此為onshape第二周的回家練習
 <iframe src="https://player.vimeo.com/video/297074800" width="640" height="311" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </script>
 </section>
