--- a/content/Lesson2-1課程內容.html
+++ b/content/Lesson2-1課程內容.html
@@ -61,10 +61,11 @@ $(function(){
 
 </ul>
 </confmenu></header>
-<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='簡介.html'>簡介</a><ul><li><a href='Onshape Lesson Plan.html'>Onshape Lesson Plan</a><ul><li><a href='Lesson1-1課程內容.html'>Lesson1-1課程內容</a><li><a href='Lesson2-1課程內容.html'>Lesson2-1課程內容</a><li><a href='Lesson3-1課程內容.html'>Lesson3-1課程內容</a><li><a href='Lesson4-1課程內容.html'>Lesson4-1課程內容</a><li><a href='Lesson5-1課程內容.html'>Lesson5-1課程內容</a></li></ul><li><a href='reveal 投影片.html'>reveal 投影片</a><li><a href='pelican 網誌.html'>pelican 網誌</a></li></ul><li><a href='影片實作練習.html'>影片實作練習</a><ul><li><a href='Week1.html'>Week1</a><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a><li><a href='Week5.html'>Week5</a></li></ul><li><a href='Python 手冊.html'>Python 手冊</a><li><a href='OnShape 手冊.html'>OnShape 手冊</a><li><a href='Fusion 360.html'>Fusion 360</a></li></ul></nav><section>Lesson1-1課程內容 << <a href='Lesson1-1課程內容.html'>Previous</a> <a href='Lesson3-1課程內容.html'>Next</a> >> Lesson3-1課程內容<br /><h1>Lesson2-1課程內容</h1>
+<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='簡介.html'>簡介</a><ul><li><a href='Onshape Lesson Plan.html'>Onshape Lesson Plan</a><ul><li><a href='Lesson1-1課程內容.html'>Lesson1-1課程內容</a><li><a href='Lesson2-1課程內容.html'>Lesson2-1課程內容</a><li><a href='Lesson3-1課程內容.html'>Lesson3-1課程內容</a><li><a href='Lesson4-1課程內容.html'>Lesson4-1課程內容</a><li><a href='Lesson5-1課程內容.html'>Lesson5-1課程內容</a></li></li></ul></ul><li><a href='影片實作練習.html'>影片實作練習</a><ul><li><a href='Week1.html'>Week1</a><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a><li><a href='Week5.html'>Week5</a></li></ul><li><a href='Python 手冊.html'>Python 手冊</a><li><a href='OnShape 手冊.html'>OnShape 手冊</a><li><a href='Fusion 360.html'>Fusion 360</a></li></ul></nav><section>Lesson1-1課程內容 << <a href='Lesson1-1課程內容.html'>Previous</a> <a href='Lesson3-1課程內容.html'>Next</a> >> Lesson3-1課程內容<br /><h1>Lesson2-1課程內容</h1>
 <ol>
 <li>設計一個圖的要點<br>●使用尺寸來約束所畫的圖<br>●依照工程圖來畫出精確的草圖<br>●建立新平面來創建草圖平面</li>
 <li>介紹圓角和倒角之特徵</li>
 <li>練習"時鐘"和HW2-2作業來熟悉以上介紹的技能</li>
 </ol>
+<p><img src="./../images/chrome_2018-10-26_10-29-56.png" width="429" height="196" alt=""></p>
 <br />Lesson1-1課程內容 << <a href='Lesson1-1課程內容.html'>Previous</a> <a href='Lesson3-1課程內容.html'>Next</a> >> Lesson3-1課程內容</section></div></body></html>
