--- a/content/Lesson4-1課程內容.html
+++ b/content/Lesson4-1課程內容.html
@@ -61,5 +61,12 @@ $(function(){
 
 </ul>
 </confmenu></header>
-<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='簡介.html'>簡介</a><ul><li><a href='Onshape Lesson Plan.html'>Onshape Lesson Plan</a><ul><li><a href='Lesson1-1課程內容.html'>Lesson1-1課程內容</a><li><a href='Lesson2-1課程內容.html'>Lesson2-1課程內容</a><li><a href='Lesson3-1課程內容.html'>Lesson3-1課程內容</a><li><a href='Lesson4-1課程內容.html'>Lesson4-1課程內容</a><li><a href='Lesson5-1課程內容.html'>Lesson5-1課程內容</a></li></li></ul></ul><li><a href='影片實作練習.html'>影片實作練習</a><ul><li><a href='Week1.html'>Week1</a><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a><li><a href='Week5.html'>Week5</a></li></ul><li><a href='Python 手冊.html'>Python 手冊</a><li><a href='OnShape 手冊.html'>OnShape 手冊</a><li><a href='Fusion 360.html'>Fusion 360</a></li></ul></nav><section>Lesson3-1課程內容 << <a href='Lesson3-1課程內容.html'>Previous</a> <a href='Lesson5-1課程內容.html'>Next</a> >> Lesson5-1課程內容<br /><h1>Lesson4-1課程內容</h1>
+<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='簡介.html'>簡介</a><ul><li><a href='Reveal投影片.html'>Reveal投影片</a><li><a href='Blog部落格.html'>Blog部落格</a><li><a href='Onshape Lesson Plan.html'>Onshape Lesson Plan</a><ul><li><a href='Lesson1-1課程內容.html'>Lesson1-1課程內容</a><li><a href='Lesson2-1課程內容.html'>Lesson2-1課程內容</a><li><a href='Lesson3-1課程內容.html'>Lesson3-1課程內容</a><li><a href='Lesson4-1課程內容.html'>Lesson4-1課程內容</a><li><a href='Lesson5-1課程內容.html'>Lesson5-1課程內容</a></li></li></ul></ul><li><a href='影片實作練習.html'>影片實作練習</a><ul><li><a href='Week1.html'>Week1</a><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a><li><a href='Week5.html'>Week5</a></li></ul><li><a href='Python 手冊.html'>Python 手冊</a><li><a href='OnShape 手冊.html'>OnShape 手冊</a><li><a href='Fusion 360.html'>Fusion 360</a></li></ul></nav><section>Lesson3-1課程內容 << <a href='Lesson3-1課程內容.html'>Previous</a> <a href='Lesson5-1課程內容.html'>Next</a> >> Lesson5-1課程內容<br /><h1>Lesson4-1課程內容</h1>
+<ol>
+<li>介紹零件的裝配和其自由度。<br>★在使用前，必須先到左下角新增組合件的檔案<br><img src="./../images/chrome_2018-11-02_10-40-17.png" width="136" height="184" alt=""></li>
+<li>運用特徵來組裝零件。<br><img src="./../images/chrome_2018-11-02_10-45-48.png" width="385" height="30" alt=""></li>
+<li>使用XYZ軸來調整位置。<br>★匯入零件檔後，可點選某面就會跳出三軸的圖示<br><img src="./../images/chrome_2018-11-02_10-41-14.png" width="159" height="198" alt=""></li>
+<li>使用特徵後，點選兩面來配合。<br>★要出現有以下的狀態代表選取，建議在選面的時候可以放大，才不會搞錯方向<img src="./../images/chrome_2018-11-02_10-51-29.png" width="119" height="200" alt=""></li>
+<li>練習HW4-2來熟悉以上技巧。</li>
+</ol>
 <br />Lesson3-1課程內容 << <a href='Lesson3-1課程內容.html'>Previous</a> <a href='Lesson5-1課程內容.html'>Next</a> >> Lesson5-1課程內容</section></div></body></html>
