--- a/content/Lesson5-1課程內容.html
+++ b/content/Lesson5-1課程內容.html
@@ -62,4 +62,9 @@ $(function(){
 </ul>
 </confmenu></header>
 <div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='簡介.html'>簡介</a><ul><li><a href='Reveal投影片.html'>Reveal投影片</a><li><a href='Blog部落格.html'>Blog部落格</a><li><a href='Onshape Lesson Plan.html'>Onshape Lesson Plan</a><ul><li><a href='Lesson1-1課程內容.html'>Lesson1-1課程內容</a><li><a href='Lesson2-1課程內容.html'>Lesson2-1課程內容</a><li><a href='Lesson3-1課程內容.html'>Lesson3-1課程內容</a><li><a href='Lesson4-1課程內容.html'>Lesson4-1課程內容</a><li><a href='Lesson5-1課程內容.html'>Lesson5-1課程內容</a></li></li></ul></ul><li><a href='影片實作練習.html'>影片實作練習</a><ul><li><a href='Week1.html'>Week1</a><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a><li><a href='Week5.html'>Week5</a></li></ul><li><a href='Python 手冊.html'>Python 手冊</a><li><a href='OnShape 手冊.html'>OnShape 手冊</a><li><a href='Fusion 360.html'>Fusion 360</a></li></ul></nav><section>Lesson4-1課程內容 << <a href='Lesson4-1課程內容.html'>Previous</a> <a href='影片實作練習.html'>Next</a> >> 影片實作練習<br /><h1>Lesson5-1課程內容</h1>
+<ol>
+<li>介紹工程圖的繪製。</li>
+<li>練習標註尺寸(長度、半徑、直徑、角度、註解)。</li>
+<li>新增三視圖、輔助試圖、局部放大視圖。<br>(詳細介紹皆在實做練習區)</li>
+</ol>
 <br />Lesson4-1課程內容 << <a href='Lesson4-1課程內容.html'>Previous</a> <a href='影片實作練習.html'>Next</a> >> 影片實作練習</section></div></body></html>
