--- a/content/Week5.html
+++ b/content/Week5.html
@@ -62,5 +62,7 @@ $(function(){
 </ul>
 </confmenu></header>
 <div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='簡介.html'>簡介</a><ul><li><a href='Reveal投影片.html'>Reveal投影片</a><li><a href='Blog部落格.html'>Blog部落格</a><li><a href='Onshape Lesson Plan.html'>Onshape Lesson Plan</a><ul><li><a href='Lesson1-1課程內容.html'>Lesson1-1課程內容</a><li><a href='Lesson2-1課程內容.html'>Lesson2-1課程內容</a><li><a href='Lesson3-1課程內容.html'>Lesson3-1課程內容</a><li><a href='Lesson4-1課程內容.html'>Lesson4-1課程內容</a><li><a href='Lesson5-1課程內容.html'>Lesson5-1課程內容</a></li></li></ul></ul><li><a href='影片實作練習.html'>影片實作練習</a><ul><li><a href='Week1.html'>Week1</a><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a><li><a href='Week5.html'>Week5</a></li></ul><li><a href='Python 手冊.html'>Python 手冊</a><li><a href='OnShape 手冊.html'>OnShape 手冊</a><li><a href='Fusion 360.html'>Fusion 360</a></li></ul></nav><section>Week4 << <a href='Week4.html'>Previous</a> <a href='Python 手冊.html'>Next</a> >> Python 手冊<br /><h1>Week5</h1>
-<p></p>
+<p>由於影片太長，故改為放置連結，在煩請老師多切頁面進行評分。</p>
+<p><a href="https://vimeo.com/299603480">影片1</a></p>
+<p><a href="https://vimeo.com/299603999">影片2</a></p>
 <br />Week4 << <a href='Week4.html'>Previous</a> <a href='Python 手冊.html'>Next</a> >> Python 手冊</section></div></body></html>
