--- a/content/index.html
+++ b/content/index.html
@@ -64,5 +64,5 @@ $(function(){
 <div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='簡介.html'>簡介</a><ul><li><a href='Reveal投影片.html'>Reveal投影片</a><li><a href='Blog部落格.html'>Blog部落格</a><li><a href='Onshape Lesson Plan.html'>Onshape Lesson Plan</a><ul><li><a href='Lesson1-1課程內容.html'>Lesson1-1課程內容</a><li><a href='Lesson2-1課程內容.html'>Lesson2-1課程內容</a><li><a href='Lesson3-1課程內容.html'>Lesson3-1課程內容</a><li><a href='Lesson4-1課程內容.html'>Lesson4-1課程內容</a><li><a href='Lesson5-1課程內容.html'>Lesson5-1課程內容</a></li></li></ul></ul><li><a href='影片實作練習.html'>影片實作練習</a><ul><li><a href='Week1.html'>Week1</a><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a><li><a href='Week5.html'>Week5</a></li></ul><li><a href='Python 手冊.html'>Python 手冊</a><li><a href='OnShape 手冊.html'>OnShape 手冊</a><li><a href='Fusion 360.html'>Fusion 360</a></li></ul></nav><section> <a href='Reveal投影片.html'>Next</a> >> Reveal投影片<br /><h1>簡介</h1>
 <p>2018 Fall 計算機程式與電腦輔助設計實習課程分組網站</p>
 <p style="padding-left: 30px;">40423126 四設計四甲 紀鈞瀚-個人網誌</p>
-<p style="padding-left: 60px;">此網誌主要介紹Onshape的課程內容以及回家作業影片說明!</p>
+<p style="padding-left: 60px;">此網誌主要介紹Onshape的課程內容以及回家作業影片說明!<br>其他內容請看簡介的投影片和部落格說明。</p>
 <br /> <a href='Reveal投影片.html'>Next</a> >> Reveal投影片</section></div></body></html>
